--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">BTL_ANDNC_QuanLyDatDoAn</string>
     <string name="welcom_to_baemin_food">WELCOM TO BAEMIN FOOD</string>
+    <string name="server_client_id">279190910585-7op7mjab3ra53l6pvpioj38fa626n0pr.apps.googleusercontent.com\n</string>
 </resources>
